Fix title vertical spacing

--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@
   font-weight: bold;
   position: relative;
   overflow: hidden;
-  margin: 0px 16px 0px 16px;
+  margin: 16px;
 }
 
 .title a {
